2001-07-24  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (html_engine_get_table): don't fail,
	just return NULL

	* htmlengine-edit-tablecell.c (html_engine_get_table_cell): don't
	fail, just return NULL

	* htmlengine-edit-cut-and-paste.c (append_object): remove unwanted
	empty flows, fix cursor position

	* htmlengine-edit.c (html_engine_next_cell): fixed for multi flow
	cells
	(html_engine_prev_cell): likewise

	* htmlengine-edit-tablecell.c
	(html_engine_delete_table_cell_contents): new method

	* htmlengine-edit-table.c (html_engine_delete_table): new method

2001-07-23  Jon Trowbridge  <trow@ximian.com>

	* htmlengine-search.c (html_engine_search_set_forward): Added.
	Allows you to change the direction of an on-going search.

	* gtkhtml-search.c (gtk_html_engine_search_set_forward): Added.
	Allows you to change the direction of an on-going search.

2001-07-23  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-clueflowstyle.c: remove undo field as it's not
	needed
	(undo_or_redo): use dir parameter
	(style_operation_new): remove undo parameter

	* htmlengine-edit-table.c (html_engine_table_goto_0_0): fixed loop
	condition
	(html_engine_table_goto_0_0): renamed, exported
	(html_engine_table_goto_col): likewise
	(html_engine_table_goto_row): likewise
	(html_engine_table_goto_pos): likewise

2001-07-20  Radek Doulik  <rodo@ximian.com>

	* htmlcursor.c: reverted ettore's revert of begin/end line
	enhancement for table cells, because otherwise it breaks prev/next
	cell methods. I hope to consult that with ettore to find out
	solution for his "cursor is going outside document range" problem

	* htmlengine-edit-table.c (goto_col): new helper function
	(goto_row): likewise
	(goto_begin): likewise
	(html_engine_table_set_rows): new method
	(html_engine_table_set_cols): new method

	* htmlengine-edit.c (html_engine_next_cell): new function,
	extracted
	(html_engine_prev_cell): new function, extracted

2001-07-19  Larry Ewing  <lewing@ximian.com>
